inserted youtube link

--- a/src/files/projects.json
+++ b/src/files/projects.json
@@ -17,7 +17,7 @@
     "tools": "Unity3D C# Mobile",
     "description": "Delivery Guy is a game inspired by Paperboy(1984 Atari), but instead of delivering newspaper you have to delivery pizzas, burguers and donuts. The current version has only 1 level and was developed in my spare time during 2 weeks.",
     "link": "https://drive.google.com/u/0/uc?id=1hg3ZGfnppqg74rwmiCpJazywzrv_lksR&export=download",
-    "action":"Download",
+    "action":"Download for Android",
     "images": ["https://i.imgur.com/09cc5ai.png", "https://i.imgur.com/V4eGdWT.png", "https://i.imgur.com/ikA4pB0.png","https://i.imgur.com/eXvw5rz.png"]
     },
     
@@ -26,7 +26,7 @@
     "type": "Game",
     "tools": "Unity3D C#",
     "description": "Football Match Simulator is being developed to be a part of a football manager game I am planning to do. The simulator is in a very early stage of development, some key features are still missing like goalkeeper behaviour, goals, corner kick, goal kick, throw in, time and the attack behaviour should be improved.",
-    "link": "https://",
+    "link": "https://youtu.be/trrUVvH-3b8",
     "action":"Watch Video",
     "images": ["https://i.imgur.com/uUtiu8s.png", "https://i.imgur.com/2JqVlfN.png", "https://i.imgur.com/a2XEdlR.png","https://i.imgur.com/gvdnSaf.png"]
 
