--- a/src/files/projects.json
+++ b/src/files/projects.json
@@ -26,7 +26,7 @@
     "type": "Game",
     "tools": "Unity3D C#",
     "description": "Football Match Simulator is being developed to be a part of a football manager game I am planning to do.  The simulator is in a very early stage of development, some key features are still missing like goalkeeper behaviour, goals, corner kick, goal kick, throw in, time and the attack behaviour should be improved.",
-    "link": "https://youtu.be/trrUVvH-3b8",
+    "link": "https://www.youtube.com/watch?v=8HNEWJGROoo",
     "action":"Watch Video",
     "images": ["https://i.imgur.com/uUtiu8s.png", "https://i.imgur.com/2JqVlfN.png", "https://i.imgur.com/a2XEdlR.png","https://i.imgur.com/gvdnSaf.png"]
 
